@@ -5,7 +5,7 @@
 /** Read a netstring from the given \c ibuf .
 
 If the input is not a netstring, \c errno (and \c in->io.errnum ) will
-be set to \c EPROTO and the state of \c in will be undefined.
+be set to \c EPROTOTYPE and the state of \c in will be undefined.
 */
 int ibuf_getnetstring(ibuf* in, str* s)
 {
@@ -14,7 +14,7 @@ int ibuf_getnetstring(ibuf* in, str* s)
   if (!ibuf_getu(in, &len)) return 0;
   if (!ibuf_getc(in, &ch)) return 0;
   if (ch != ':') {
-    errno = in->io.errnum = EPROTO;
+    errno = in->io.errnum = EPROTOTYPE;
     return 0;
   }
   if (!str_ready(s, len)) return 0;
@@ -22,7 +22,7 @@ int ibuf_getnetstring(ibuf* in, str* s)
   s->s[s->len = len] = 0;
   if (!ibuf_getc(in, &ch)) return 0;
   if (ch != ',') {
-    errno = in->io.errnum = EPROTO;
+    errno = in->io.errnum = EPROTOTYPE;
     return 0;
   }
   return 1;
